# sample_project_structure

./: .gitignore  README.md  pyproject.toml
src/: utils.py
tests/: test_main.py
